[package]
name = "mb-solana"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "mb-solana"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive", "cargo"] }
colored_json = "2.1.0"
itertools = "0.10.3"
serde_json = "1.0.81"
solana-sdk = "1.10.17"
tiny-bip39 = "0.8.2"
