[package]
name = "mb-solana"
version = "0.0.4"
edition = "2021"
description = "my solana lib helpers and cli tools"
license = "Unlicense"

[[bin]]
name = "mb-solana"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive", "cargo"] }
clap_complete = "3.1.4"
colored_json = "2.1.0"
itertools = "0.10.3"
rpassword = "6.0.1"
serde_json = "1.0.81"
solana-sdk = "1.10.20"
tiny-bip39 = "0.8.2"
